--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -4,6 +4,12 @@
     <title>{{title}}</title>
     <link rel='stylesheet' href='/stylesheets/style.css' />
   </head>
+  <header>
+    <nav>
+      <a href="/add-promo-code">Add Promo Code</a>
+      <a href="/promo-codes">View All Promo Codes</a>
+    </nav>
+  </header>
   <body>
 
     {{{body}}}
